All section color match update

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
                             class="fs-16 fw-500 ff_Rubik text_lightblack m-0 p-0 d-lg-none d-block">sign&nbsp;up</a>
                     </li>
                     <li><button
-                            class="sign_up d-lg-none d-flex align-items-center justify-content-center text-center">sign&nbsp;up</button>
+                            class="sign_up d-lg-none d-flex align-items-center justify-content-center text-center fs-16 fw-500 ff_Rubik text_red">sign&nbsp;up</button>
                     </li>
                 </ul>
                 <ul class="d-flex align-items-center gap-5 m-0 p-0">
-                    <li><a href="#" class="fs-16 fw-500 ff_Rubik text_black m-0 p-0 d-lg-block d-none">sign&nbsp;up</a>
+                    <li><a href="#"
+                            class="fs-16 fw-500 ff_Rubik text_lightblack m-0 p-0 d-lg-block d-none">sign&nbsp;up</a>
                     </li>
                     <li><button
                             class="sign_up align-items-center justify-content-center text-center fs-16 fw-500 ff_Rubik text_red d-lg-flex d-none">sign&nbsp;up</button>
